Fixed alignment of index box with bottom of page

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -18,7 +18,7 @@ body {
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 65px;
+  height: 50px;
   background-color: #fff;
   border-top: 1px solid #e6e6e6;
 }
